src/parser/snapshots/monkey_language_server__parser__test__if_expr_unhappy_11.snap
---
source: src/parser/test.rs
description: "if (x) { @ }"
expression: result
---
[
    If {
        token: Token(If, "if", (0,0)->(0,2)),
        condition: Ok(
            Identifier {
                token: Token(Identifier, "x", (0,4)->(0,5)),
                name: "x",
            },
        ),
        consequence: Err(
            Err(UnexpectedToken("SyntaxError: Unexpected '@'."), (0,9)->(0,10)),
        ),
        alternative: Ok(
            None,
        ),
    },
]

===================================

if (x) { @ }
         ^ SyntaxError: Unexpected '@'.
